added basic neural net

--- a/Ms Pacman.ipynb
+++ b/Ms Pacman.ipynb
@@ -22,7 +22,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[2017-09-13 13:31:07,779] Making new env: MsPacman-v0\n"
+      "[2017-09-14 03:38:19,322] Making new env: MsPacman-v0\n"
      ]
     },
     {
@@ -102,7 +102,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "env.reset()\n",
@@ -170,8 +172,255 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "class QNetwork:\n",
+    "    def __init__(self, learning_rate=0.01, state_size=4, \n",
+    "                 action_size=2, hidden_size=10, \n",
+    "                 name='QNetwork'):\n",
+    "        # state inputs to the Q-network\n",
+    "        with tf.variable_scope(name):\n",
+    "            self.inputs_ = tf.placeholder(tf.float32, [None, state_size], name='inputs')\n",
+    "            \n",
+    "            # One hot encode the actions to later choose the Q-value for the action\n",
+    "            self.actions_ = tf.placeholder(tf.int32, [None], name='actions')\n",
+    "            one_hot_actions = tf.one_hot(self.actions_, action_size)\n",
+    "            \n",
+    "            # Target Q values for training\n",
+    "            self.targetQs_ = tf.placeholder(tf.float32, [None], name='target')\n",
+    "            \n",
+    "            # ReLU hidden layers\n",
+    "            self.fc1 = tf.contrib.layers.fully_connected(self.inputs_, hidden_size)\n",
+    "            self.fc2 = tf.contrib.layers.fully_connected(self.fc1, hidden_size)\n",
+    "\n",
+    "            # Linear output layer\n",
+    "            self.output = tf.contrib.layers.fully_connected(self.fc2, action_size, \n",
+    "                                                            activation_fn=None)\n",
+    "            \n",
+    "            ### Train with loss (targetQ - Q)^2\n",
+    "            # output has length 2, for two actions. This next line chooses\n",
+    "            # one value from output (per row) according to the one-hot encoded actions.\n",
+    "            self.Q = tf.reduce_sum(tf.multiply(self.output, one_hot_actions), axis=1)\n",
+    "            \n",
+    "            self.loss = tf.reduce_mean(tf.square(self.targetQs_ - self.Q))\n",
+    "            self.opt = tf.train.AdamOptimizer(learning_rate).minimize(self.loss)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from collections import deque\n",
+    "class Memory():\n",
+    "    def __init__(self, max_size = 1000):\n",
+    "        self.buffer = deque(maxlen=max_size)\n",
+    "    \n",
+    "    def add(self, experience):\n",
+    "        self.buffer.append(experience)\n",
+    "            \n",
+    "    def sample(self, batch_size):\n",
+    "        idx = np.random.choice(np.arange(len(self.buffer)), \n",
+    "                               size=batch_size, \n",
+    "                               replace=False)\n",
+    "        return [self.buffer[ii] for ii in idx]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "train_episodes = 1000          # max number of episodes to learn from\n",
+    "max_steps = 200                # max steps in an episode\n",
+    "gamma = 0.99                   # future reward discount\n",
+    "\n",
+    "# Exploration parameters\n",
+    "explore_start = 1.0            # exploration probability at start\n",
+    "explore_stop = 0.01            # minimum exploration probability \n",
+    "decay_rate = 0.0001            # exponential decay rate for exploration prob\n",
+    "\n",
+    "# Network parameters\n",
+    "hidden_size = 64               # number of units in each Q-network hidden layer\n",
+    "learning_rate = 0.0001         # Q-network learning rate\n",
+    "\n",
+    "# Memory parameters\n",
+    "memory_size = 10000            # memory capacity\n",
+    "batch_size = 20                # experience mini-batch size\n",
+    "pretrain_length = batch_size   # number experiences to pretrain the memory"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "tf.reset_default_graph()\n",
+    "mainQN = QNetwork(name='main', hidden_size=hidden_size, learning_rate=learning_rate)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Initialize the simulation\n",
+    "env.reset()\n",
+    "# Take one random step to get the pole and cart moving\n",
+    "state, reward, done, _ = env.step(env.action_space.sample())\n",
+    "\n",
+    "memory = Memory(max_size=memory_size)\n",
+    "\n",
+    "# Make a bunch of random actions and store the experiences\n",
+    "for ii in range(pretrain_length):\n",
+    "    # Uncomment the line below to watch the simulation\n",
+    "    # env.render()\n",
+    "\n",
+    "    # Make a random action\n",
+    "    action = env.action_space.sample()\n",
+    "    next_state, reward, done, _ = env.step(action)\n",
+    "\n",
+    "    if done:\n",
+    "        # The simulation fails so no next state\n",
+    "        next_state = np.zeros(state.shape)\n",
+    "        # Add experience to memory\n",
+    "        memory.add((state, action, reward, next_state))\n",
+    "        \n",
+    "        # Start new episode\n",
+    "        env.reset()\n",
+    "        # Take one random step to get the pole and cart moving\n",
+    "        state, reward, done, _ = env.step(env.action_space.sample())\n",
+    "    else:\n",
+    "        # Add experience to memory\n",
+    "        memory.add((state, action, reward, next_state))\n",
+    "        state = next_state"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "Cannot feed value of shape (20, 210, 160, 3) for Tensor 'main/inputs:0', which has shape '(?, 4)'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-8-bc024d8c2201>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     64\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     65\u001b[0m             \u001b[0;31m# Train network\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 66\u001b[0;31m             \u001b[0mtarget_Qs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msess\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmainQN\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0moutput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfeed_dict\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m{\u001b[0m\u001b[0mmainQN\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minputs_\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mnext_states\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     67\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     68\u001b[0m             \u001b[0;31m# Set target_Qs to 0 for states where episode ends\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/anaconda/lib/python3.6/site-packages/tensorflow/python/client/session.py\u001b[0m in \u001b[0;36mrun\u001b[0;34m(self, fetches, feed_dict, options, run_metadata)\u001b[0m\n\u001b[1;32m    787\u001b[0m     \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    788\u001b[0m       result = self._run(None, fetches, feed_dict, options_ptr,\n\u001b[0;32m--> 789\u001b[0;31m                          run_metadata_ptr)\n\u001b[0m\u001b[1;32m    790\u001b[0m       \u001b[0;32mif\u001b[0m \u001b[0mrun_metadata\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    791\u001b[0m         \u001b[0mproto_data\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtf_session\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mTF_GetBuffer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrun_metadata_ptr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/anaconda/lib/python3.6/site-packages/tensorflow/python/client/session.py\u001b[0m in \u001b[0;36m_run\u001b[0;34m(self, handle, fetches, feed_dict, options, run_metadata)\u001b[0m\n\u001b[1;32m    973\u001b[0m                 \u001b[0;34m'Cannot feed value of shape %r for Tensor %r, '\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    974\u001b[0m                 \u001b[0;34m'which has shape %r'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 975\u001b[0;31m                 % (np_val.shape, subfeed_t.name, str(subfeed_t.get_shape())))\n\u001b[0m\u001b[1;32m    976\u001b[0m           \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgraph\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mis_feedable\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msubfeed_t\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    977\u001b[0m             \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Tensor %s may not be fed.'\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0msubfeed_t\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: Cannot feed value of shape (20, 210, 160, 3) for Tensor 'main/inputs:0', which has shape '(?, 4)'"
+     ]
+    }
+   ],
+   "source": [
+    "# Now train with experiences\n",
+    "saver = tf.train.Saver()\n",
+    "rewards_list = []\n",
+    "with tf.Session() as sess:\n",
+    "    # Initialize variables\n",
+    "    sess.run(tf.global_variables_initializer())\n",
+    "    \n",
+    "    step = 0\n",
+    "    for ep in range(1, train_episodes):\n",
+    "        total_reward = 0\n",
+    "        t = 0\n",
+    "        while t < max_steps:\n",
+    "            step += 1\n",
+    "            # Uncomment this next line to watch the training\n",
+    "            env.render() \n",
+    "            \n",
+    "            # Explore or Exploit\n",
+    "            explore_p = explore_stop + (explore_start - explore_stop)*np.exp(-decay_rate*step) \n",
+    "            if explore_p > np.random.rand():\n",
+    "                # Make a random action\n",
+    "                action = env.action_space.sample()\n",
+    "            else:\n",
+    "                # Get action from Q-network\n",
+    "                feed = {mainQN.inputs_: state.reshape((1, *state.shape))}\n",
+    "                Qs = sess.run(mainQN.output, feed_dict=feed)\n",
+    "                action = np.argmax(Qs)\n",
+    "            \n",
+    "            # Take action, get new state and reward\n",
+    "            next_state, reward, done, _ = env.step(action)\n",
+    "    \n",
+    "            total_reward += reward\n",
+    "            \n",
+    "            if done:\n",
+    "                # the episode ends so no next state\n",
+    "                next_state = np.zeros(state.shape)\n",
+    "                t = max_steps\n",
+    "                \n",
+    "                print('Episode: {}'.format(ep),\n",
+    "                      'Total reward: {}'.format(total_reward),\n",
+    "                      'Training loss: {:.4f}'.format(loss),\n",
+    "                      'Explore P: {:.4f}'.format(explore_p))\n",
+    "                rewards_list.append((ep, total_reward))\n",
+    "                \n",
+    "                # Add experience to memory\n",
+    "                memory.add((state, action, reward, next_state))\n",
+    "                \n",
+    "                # Start new episode\n",
+    "                env.reset()\n",
+    "                # Take one random step to get the pole and cart moving\n",
+    "                state, reward, done, _ = env.step(env.action_space.sample())\n",
+    "\n",
+    "            else:\n",
+    "                # Add experience to memory\n",
+    "                memory.add((state, action, reward, next_state))\n",
+    "                state = next_state\n",
+    "                t += 1\n",
+    "            \n",
+    "            # Sample mini-batch from memory\n",
+    "            batch = memory.sample(batch_size)\n",
+    "            states = np.array([each[0] for each in batch])\n",
+    "            actions = np.array([each[1] for each in batch])\n",
+    "            rewards = np.array([each[2] for each in batch])\n",
+    "            next_states = np.array([each[3] for each in batch])\n",
+    "            \n",
+    "            # Train network\n",
+    "            target_Qs = sess.run(mainQN.output, feed_dict={mainQN.inputs_: next_states})\n",
+    "            \n",
+    "            # Set target_Qs to 0 for states where episode ends\n",
+    "            episode_ends = (next_states == np.zeros(states[0].shape)).all(axis=1)\n",
+    "            target_Qs[episode_ends] = (0, 0)\n",
+    "            \n",
+    "            targets = rewards + gamma * np.max(target_Qs, axis=1)\n",
+    "\n",
+    "            loss, _ = sess.run([mainQN.loss, mainQN.opt],\n",
+    "                                feed_dict={mainQN.inputs_: states,\n",
+    "                                           mainQN.targetQs_: targets,\n",
+    "                                           mainQN.actions_: actions})\n",
+    "        \n",
+    "    saver.save(sess, \"checkpoints/pacman.ckpt\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": []
   }
  ],
